--- a/AssetManagementSystem.PL/Views/User/Index.cshtml
+++ b/AssetManagementSystem.PL/Views/User/Index.cshtml
@@ -76,6 +76,13 @@
                                         <i class="bi bi-trash-fill"></i>
                                     </a>
                                 </td>
+                                <td>
+                                    <a asp-action="ManageRoles"
+                                       asp-route-userId="@user.Id"
+                                       class="btn btn-info btn-sm">
+                                        <i class="fas fa-user-tag"></i> Manage Roles
+                                    </a>
+                                </td>
                             </tr>
                         }
                     </tbody>
