--- a/AssetManagementSystem.PL/Views/Shared/_Dashboard.cshtml
+++ b/AssetManagementSystem.PL/Views/Shared/_Dashboard.cshtml
@@ -327,34 +327,17 @@
                                 <p>User Management</p>
                             </a>
                         </li>
+                        <!-- Locations Management (Unified) -->
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Facilities")" class="nav-link">
-                                <i class="nav-icon fas fa-building"></i>
-                                <p>Facilities</p>
+                            <a href="@Url.Action("Index", "Location")" class="nav-link">
+                                <i class="nav-icon fas fa-map-marked-alt"></i>
+                                <p>Location Management</p>
                             </a>
                         </li>
-
-                        <!-- Departments -->
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Departments")" class="nav-link">
+                            <a href="@Url.Action("Departments", "Location")" class="nav-link">
                                 <i class="nav-icon fas fa-sitemap"></i>
                                 <p>Departments</p>
-                            </a>
-                        </li>
-
-                        <!-- Buildings -->
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index", "Buildings")" class="nav-link">
-                                <i class="nav-icon fas fa-city"></i>
-                                <p>Buildings</p>
-                            </a>
-                        </li>
-
-                        <!-- Rooms -->
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index", "Rooms")" class="nav-link">
-                                <i class="nav-icon fas fa-door-open"></i>
-                                <p>Rooms</p>
                             </a>
                         </li>
                     </ul>
