--- a/AssetManagementSystem.PL/Views/Location/Departments.cshtml
+++ b/AssetManagementSystem.PL/Views/Location/Departments.cshtml
@@ -54,6 +54,12 @@
 </div>
 
 @section Scripts {
+    <style>
+        a.btn-light {
+            background-color: white !important; /* Primary blue */
+            color: #0d6efd !important; /* White text on hover */
+        }
+	</style>
     <script>
         $(document).ready(function() {
             $('#departmentsTable').DataTable({
