add disbursement and fix bulk errors

--- a/AssetManagementSystem.PL/Views/Shared/_Dashboard.cshtml
+++ b/AssetManagementSystem.PL/Views/Shared/_Dashboard.cshtml
@@ -337,6 +337,12 @@
                                 <p>Departments</p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Disbursement")" class="nav-link">
+                                <i class="nav-icon fas fa-clipboard-list"></i>
+                                <p>طلبات الصرف</p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
