--- a/AssetManagementSystem.PL/Views/Shared/_Dashboard.cshtml
+++ b/AssetManagementSystem.PL/Views/Shared/_Dashboard.cshtml
@@ -342,6 +342,12 @@
                                 <i class="nav-icon fas fa-clipboard-list"></i>
                                 <p>طلبات الصرف</p>
                             </a>
+                        </li> 
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "ReturnDocument")" class="nav-link">
+                                <i class="nav-icon fas fa-clipboard-list"></i>
+                                <p>طلبات الصرف</p>
+                            </a>
                         </li>
                     </ul>
                 </nav>
